@@ -1,5 +1,6 @@
 0.04
  - Fix EXAMPLE in doc. Fix to real @ARGS.
+ - Move code to construct command outside of cycle.
 
 0.03 2024-06-23T12:53:42+02:00
  - Add tests.
